Fixed some bugs on mobile devices

--- a/main.css
+++ b/main.css
@@ -26,13 +26,15 @@ html, body, .theme {
 }
 
 .page {
+    position: absolute;
     padding: var(--main-margin);
     width: calc(100% - var(--main-margin) * 2);
-    height: calc(100% - var(--main-margin) * 2);
-
+    min-height: calc(100% - var(--main-margin) * 2);
+    height: max-content;
+    
     font-family: "Lucida Grande", "Lucida Sans Unicode", Arial, Helvetica, Verdana, sans-serif;
     font-size: 22px;
-
+    
     background-color: rgb(var(--color-background));
 }
 
@@ -254,4 +256,11 @@ html, body, .theme {
 
 .theme > input:not(:checked) ~ .page > .theme-switch > .night {
     display: none;
+}
+
+.space {
+    display: block;
+    position: relative;
+    height: 96px;
+    width: 0px;
 }
